<resources>
    <string name="app_name">MineBasicSample</string>

    <string name="likes">Likes</string>
    <string name="textview">TextView</string>
    <string name="profile_name">NAME</string>
    <string name="profile_lastname">LAST NAME</string>
    <string name="last_name_label">Last name</string>
    <string name="name_label">Name</string>
    <string name="profile_avatar_cd">Profile\'s avatar</string>
    <string name="like">Like</string>
    <string name="observable_fields_activity_text">Observable Fields activity</string>
    <string name="viewmodel_activity_text">ViewModel activity</string>
    <string name="observableactivity_activity_label_text">Uses ObservableFields to automatically refresh the UI and showcases common bad practices</string>
    <string name="viewmodel_activity_label_text">Uses a ViewModel to hold data and handle user actions, using better alternatives</string>
    <string name="see_readme">See README.md for details</string>

</resources>
