<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.yogurt.mine.basicsample.R"/>
        <variable
            name="model"
            type="com.yogurt.mine.basicsample.data.ObservableFieldProfile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{model.name}"
            tools:text="Ada"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginEnd="128dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/profile_avatar_cd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/like_label"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="48dp"
            android:minWidth="48dp"
            app:srcCompat="@{model.likes &lt; 4 ? R.drawable.ic_person_black_96dp : R.drawable.ic_whatshot_black_96dp }"/>

        <TextView
            android:id="@+id/like_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/likes"/>

        <TextView
            android:id="@+id/like_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12"
            android:text="@{String.valueOf(model.likes)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/like_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@id/like_label"
            app:layout_constraintTop_toBottomOf="@id/like_label"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            app:layout_constraintStart_toStartOf="@id/like_num"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@id/like_num"
            app:layout_constraintTop_toBottomOf="@id/like_num"
            android:onClick="onLike"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>